# multi-agent-document-intelligence-platform

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
frontend/: app.js  index.html  styles.css
knowledge_base/examples/: fraud_detection_rules.md
knowledge_base/policies/: crm_escalation_policy.md
knowledge_base/regulations/: compliance_guidelines.md
src/: main.py
src/agents/: action_agent.py  decision_agent.py  extraction_agent.py  intake_agent.py  intent_agent.py  knowledge_agent.py  risk_agent.py
src/api/routes/: documents.py  health.py  rag.py  workflow.py
src/core/: config.py  llm_factory.py  logging.py  utils.py
src/graph/: edges.py  nodes.py  state.py  workflow.py
src/rag/: ingestion.py  retriever.py  vector_store.py
src/schemas/: agent_outputs.py  documents.py  workflow.py
src/services/: document_parser.py  workflow_service.py
src/tools/: __init__.py  crm_tool.py  email_tool.py  risk_tool.py  validation_tool.py
tests/: test_llm_factory.py  test_schemas.py  test_workflow.py
