[project]
name = "multi-agent-doc-intel"
version = "1.0.0"
description = "Multi-Agent Document Intelligence & CRM Automation Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Akila" }]

dependencies = [
    # --- FastAPI & Server ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",

    # --- LangChain & LangGraph ---
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langchain-groq>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.2.0",

    # --- Vector Store ---
    "chromadb>=0.6.0",

    # --- Structured Outputs & Config ---
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # --- Document Processing ---
    "pymupdf>=1.25.0",

    # --- Utilities ---
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
